updated main nav layout, updated main banner heightproperty  and made search visible on initial load

--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -9,45 +9,7 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/utilities";
-
-// Layout & components
-@import "bootstrap/scss/root";
-@import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/containers";
-@import "bootstrap/scss/grid";
-@import "bootstrap/scss/tables";
-@import "bootstrap/scss/forms";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-//@import "dbootstrap/scss/ropdown";
-@import "bootstrap/scss/button-group";
-@import "bootstrap/scss/nav";
-@import "bootstrap/scss/navbar";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/accordion";
-@import "bootstrap/scss/breadcrumb";
-@import "bootstrap/scss/pagination";
-@import "bootstrap/scss/badge";
-@import "bootstrap/scss/alert";
-@import "bootstrap/scss/progress";
-@import "bootstrap/scss/list-group";
-@import "bootstrap/scss/close";
-@import "bootstrap/scss/toasts";
-@import "bootstrap/scss/modal";
-@import "bootstrap/scss/tooltip";
-@import "bootstrap/scss/popover";
-@import "bootstrap/scss/carousel";
-@import "bootstrap/scss/spinners";
-@import "bootstrap/scss/offcanvas";
-
-// Helpers
-@import "bootstrap/scss/helpers";
-
-
-
-
+@import "bootstrap/scss/bootstrap.scss";
 
 // State Template Variables
 @import "variables";
@@ -66,7 +28,7 @@
 //@import "colorscheme/colorscheme-sacramento.scss";
 //@import "colorscheme/colorscheme-santabarbara.scss";
 //@import "colorscheme/colorscheme-sierra.scss";
-//@import "colorscheme/colorscheme-trinity.scss"; 
+//@import "colorscheme/colorscheme-trinity.scss";
 
 @import "cagov/reset.scss";
 @import "cagov/mixins.scss";
@@ -113,8 +75,8 @@
 @import "cagov/location.scss";
 @import "cagov/gallery.scss";
 @import "cagov/cards.scss";
-@import "cagov/hero-info.scss"; 
-@import "cagov/icon-blocks.scss"; 
+@import "cagov/hero-info.scss";
+@import "cagov/icon-blocks.scss";
 @import "cagov/jobs.scss";
 @import "cagov/tables.scss";
 @import "cagov/lists.scss";
@@ -134,7 +96,6 @@
 @import "cagov/progress-block.scss";
 @import "cagov/gradient-backgrounds.scss";
 @import "cagov/globals.scss";
-
 
 //
 // ORGANIZATION CUSTOM STYLES HERE
