removed owl carousels modules, added bootstrap carousel sample

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -21311,714 +21311,9 @@ div[data-state="open"] .title {
 /* -----------------------------------------
    CAROUSEL - /source/scss/cagov/carousel.scss
 ----------------------------------------- */
-/*
- * 	CAGOV theme - Owl Carousel CSS File
- */
-.carousel .owl-nav {
-  margin-top: 10px;
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.carousel .owl-nav [class*='owl-'] {
-  background: rgba(0, 0, 0, 0.4) !important;
-  color: #fff !important;
-  font-size: 1.25rem !important;
-  height: 35px;
-  width: 35px;
-  border-radius: 35px;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.carousel .owl-nav [class*='owl-'] > span {
-  line-height: 2.1875rem;
-}
-
-.carousel .owl-nav [class*='owl-']:hover {
-  text-decoration: none;
-}
-
-.carousel .owl-nav .disabled {
-  opacity: 0.5;
-  cursor: default;
-}
-
-.carousel .owl-nav.disabled + .owl-dots {
-  margin-top: 10px;
-}
-
-.carousel .owl-dots {
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.carousel .owl-dots .owl-dot {
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-}
-
-.carousel .owl-dots .owl-dot span {
-  width: 10px;
-  height: 10px;
-  margin: 5px 7px;
-  background: #d6d6d6;
-  display: block;
-  -webkit-backface-visibility: visible;
-  -webkit-transition: opacity 200ms ease;
-  -moz-transition: opacity 200ms ease;
-  -ms-transition: opacity 200ms ease;
-  -o-transition: opacity 200ms ease;
-  transition: opacity 200ms ease;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-}
-
-.carousel .owl-dots .owl-dot.active span,
-.carousel .owl-dots .owl-dot:hover span {
-  background: #FDB81E;
-}
-
-/* end theme */
-/* owl-inline-nav class positions previous and next buttons inline with the carousel */
-.carousel-media,
-.carousel-link,
-.carousel-slider,
-.carousel-gallery {
-  padding: 0 3em;
-  position: relative;
-}
-
-.carousel-media .owl-nav,
-.carousel-link .owl-nav,
-.carousel-slider .owl-nav,
-.carousel-gallery .owl-nav {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  margin-top: 0;
-}
-
-.carousel-media .owl-prev,
-.carousel-link .owl-prev,
-.carousel-slider .owl-prev,
-.carousel-gallery .owl-prev {
-  position: absolute;
-  left: 0;
-}
-
-.carousel-media .owl-next,
-.carousel-link .owl-next,
-.carousel-slider .owl-next,
-.carousel-gallery .owl-next {
-  position: absolute;
-  right: 0;
-}
-
-.carousel-media .owl-nav .owl-prev,
-.carousel-media .owl-nav .owl-next,
-.carousel-link .owl-nav .owl-prev,
-.carousel-link .owl-nav .owl-next,
-.carousel-slider .owl-nav .owl-prev,
-.carousel-slider .owl-nav .owl-next,
-.carousel-gallery .owl-nav .owl-prev,
-.carousel-gallery .owl-nav .owl-next {
-  margin: -1em 0 0;
-}
-
-.carousel-video,
-.carousel-video-submenu,
-.carousel-content {
-  overflow: hidden;
-}
-
-.carousel-video:hover .owl-prev,
-.carousel-video-submenu:hover .owl-prev,
-.carousel-content:hover .owl-prev {
-  color: white;
-  position: absolute;
-  left: 0.75rem;
-}
-
-@media (max-width: 767px) {
-  .carousel-video:hover .owl-prev,
-  .carousel-video-submenu:hover .owl-prev,
-  .carousel-content:hover .owl-prev {
-    left: 0.1em;
-  }
-}
-
-.carousel-video:hover .owl-next,
-.carousel-video-submenu:hover .owl-next,
-.carousel-content:hover .owl-next {
-  color: white;
-  position: absolute;
-  right: 0.75rem;
-}
-
-@media (max-width: 767px) {
-  .carousel-video:hover .owl-next,
-  .carousel-video-submenu:hover .owl-next,
-  .carousel-content:hover .owl-next {
-    right: 0.1em;
-  }
-}
-
-.carousel-video .owl-nav,
-.carousel-video-submenu .owl-nav,
-.carousel-content .owl-nav {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  margin-top: 0;
-}
-
-.carousel-video .owl-prev,
-.carousel-video-submenu .owl-prev,
-.carousel-content .owl-prev {
-  position: absolute;
-  left: -2em;
-}
-
-.carousel-video .owl-next,
-.carousel-video-submenu .owl-next,
-.carousel-content .owl-next {
-  position: absolute;
-  right: -2em;
-}
-
-.carousel-video .owl-nav .owl-prev,
-.carousel-video .owl-nav .owl-next,
-.carousel-video-submenu .owl-nav .owl-prev,
-.carousel-video-submenu .owl-nav .owl-next,
-.carousel-content .owl-nav .owl-prev,
-.carousel-content .owl-nav .owl-next {
-  -webkit-transition: left 400ms ease, right 400ms ease;
-  transition: left 400ms ease, right 400ms ease;
-  margin: -1em 0 0;
-}
-
-.carousel-video .owl-nav .owl-prev:hover,
-.carousel-video .owl-nav .owl-next:hover,
-.carousel-video-submenu .owl-nav .owl-prev:hover,
-.carousel-video-submenu .owl-nav .owl-next:hover,
-.carousel-content .owl-nav .owl-prev:hover,
-.carousel-content .owl-nav .owl-next:hover {
-  background: rgba(0, 0, 0, 0.75);
-}
-
-@media (max-width: 767px) {
-  .carousel-content .owl-nav .owl-prev {
-    color: white;
-    position: absolute;
-    left: 0.1em;
-  }
-  .carousel-content .owl-nav .owl-next {
-    color: white;
-    position: absolute;
-    right: 0.1em;
-  }
-}
-
-.carousel-content .owl-dots {
-  position: absolute !important;
-  left: 50% !important;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  -webkit-backface-visibility: hidden;
-  height: 15px;
-  bottom: 25px;
-}
-
-.carousel-content .item {
-  position: relative;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.carousel-content .content-container {
-  pointer-events: none;
-  color: white;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.carousel-content .content-container .content {
-  pointer-events: all;
-  padding: 20px 20px 50px 20px;
-}
-
-.carousel-content img + .content-container, .carousel-content video + .content-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 10%;
-  margin-bottom: 50px;
-  padding: 0;
-  max-height: 100%;
-  overflow: hidden;
-}
-
-.carousel-content img + .content-container .content, .carousel-content video + .content-container .content {
-  padding: 20px;
-}
-
-.carousel-content .item.backdrop img + .content-container, .carousel-content .item.backdrop video + .content-container {
-  background: rgba(0, 0, 0, 0.3);
-}
-
-@media (min-width: 768px) {
-  .carousel-content .item.backdrop .content-container:first-child {
-    padding: 10%;
-  }
-}
-
-.carousel-content .item.backdrop .content-container:first-child .content {
-  background: rgba(0, 0, 0, 0.65);
-}
-
-.owl-item {
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: translateZ(0) scale(1, 1);
-}
-
-.carousel-video .owl-video-play-icon span {
-  font-size: 5rem;
-  line-height: 5rem;
-  color: white;
-  opacity: 0;
-  background-color: #222222;
-  border-radius: 10px;
-  padding: 15px 15px;
-}
-
-.carousel-video .item-overlay {
-  background: rgba(0, 0, 0, 0.55);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  text-align: center;
-  vertical-align: middle;
-  opacity: 0;
-  -webkit-transition: opacity .25s ease;
-  transition: opacity .25s ease;
-  color: rgba(255, 255, 255, 0.8);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.carousel-video .item-overlay span {
-  opacity: 0;
-}
-
-.carousel-video .owl-item:not(.owl-video-playing):hover .item-overlay {
-  opacity: 1;
-}
-
-.carousel-video .owl-item:not(.owl-video-playing):hover .owl-video-play-icon span {
-  opacity: 1;
-}
-
-.carousel-video .item {
-  position: relative;
-  width: 100%;
-}
-
-.carousel-video .item .owl-video-wrapper, .carousel-video .item .owl-video-tn {
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-}
-
-.carousel-video .item .video {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-}
-
-.carousel-video .item .video video {
-  width: 100%;
-}
-
-.carousel-video-submenu {
-  margin-top: 20px;
-}
-
-.carousel-video-submenu .owl-item button {
-  border: 5px solid #ddd;
-}
-
-.carousel-video-submenu .owl-item.watching img {
-  border-width: 5px;
-  border-style: solid;
-}
-
-.carousel-video-submenu .owl-item.watching button {
-  border-width: 5px;
-  border-style: solid;
-}
-
-.carousel-video-submenu .item-thumbnail {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.carousel-video-submenu .item-thumbnail .videoThumb {
-  display: block;
-  width: 100%;
-  background-size: cover;
-  background-position: center, center;
-  height: 160px;
-  zoom: 1;
-}
-
-.carousel-video-submenu .item-thumbnail .videoThumb:focus {
-  outline: #2ea3f2 solid 2px;
-}
-
-.carousel-video-submenu .item-thumbnail .videoThumb:focus + .item-overlay {
-  opacity: 1;
-}
-
-@media (max-width: 991px) {
-  .carousel-video-submenu .item-thumbnail .videoThumb {
-    height: 110px;
-  }
-}
-
-@media (max-width: 767px) {
-  .carousel-video-submenu .item-thumbnail .videoThumb {
-    height: 80px;
-  }
-}
-
-.carousel-video-submenu .item-thumbnail:hover .item-overlay, .carousel-video-submenu .item-thumbnail:focus .item-overlay {
-  opacity: 1;
-}
-
-.carousel-video-submenu .item-thumbnail .item-overlay {
-  background: rgba(0, 0, 0, 0.55);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  text-align: center;
-  vertical-align: middle;
-  opacity: 0;
-  -webkit-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-  color: rgba(255, 255, 255, 0.8);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.carousel-video-submenu .item-thumbnail .item-overlay button {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  background: transparent;
-  font-size: 4em;
-  color: #fff;
-}
-
-.ie9 .carousel-video-submenu .item-thumbnail .item-overlay {
-  display: table;
-}
-
-.ie9 .carousel-video-submenu .item-thumbnail .item-overlay span {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.carousel-video-submenu .item-thumbnail .item-overlay span {
-  -ms-flex-item-align: center;
-  align-self: center;
-  font-size: 50px;
-  cursor: pointer;
-}
-
-@media (max-width: 992px) {
-  .carousel-video-submenu .item-thumbnail .item-overlay span {
-    font-size: 30px;
-  }
-}
-
-.owl-prev {
-  position: absolute;
-  left: 0;
-}
-
-.owl-next {
-  position: absolute;
-  right: 0;
-}
-
-.owl-nav .owl-prev,
-.owl-nav .owl-next {
-  margin: -1em 0 0;
-}
-
-/* Banner Carousel */
-.carousel-banner .slide {
-  background-position: center;
-  background-size: cover;
-}
-
-.header-slideshow-banner .carousel-banner .owl-item img {
-  width: auto;
-  height: 50%;
-}
-
-.header-slideshow-banner .banner-pager {
-  position: absolute;
-  right: 45px;
-  top: auto;
-  bottom: 25px;
-}
-
-.header-slideshow-banner .banner-control {
-  cursor: pointer;
-  font-weight: bold;
-  text-align: center;
-  color: #fff;
-  background: #181818;
-  background-color: rgba(0, 0, 0, 0.6);
-  font-family: "Asap Condensed", sans-serif;
-  border: none;
-  display: block;
-  width: 25px;
-  height: 26px;
-  float: left;
-  margin: 0 5px 0 0;
-  font-stretch: normal;
-  border-radius: 0;
-  outline-style: none;
-  /* remove outlines, for FF */
-}
-
-.header-slideshow-banner .banner-control:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.header-slideshow-banner .banner-control.active {
-  display: block;
-  color: #000;
-  background-color: rgba(255, 255, 255, 0.7);
-  border: none;
-}
-
-.header-slideshow-banner .banner-control .pause {
-  width: 25px;
-  height: 26px;
-  border: none;
-  text-align: center;
-  padding: 0;
-  color: #fff;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.header-slideshow-banner .banner-control .play {
-  width: 25px;
-  height: 26px;
-  border: none;
-  padding: 0;
-  text-align: center;
-  cursor: pointer;
-}
-
-.header-slideshow-banner .banner-play-pause {
-  position: absolute;
-  top: auto;
-  right: 15px;
-  bottom: 25px;
-  z-index: 1000;
-}
-
-.slide-text {
-  position: absolute;
-  top: auto;
-  padding: 5px 15px 25px 15px;
-  bottom: 0px;
-  width: 100%;
-  margin: 0 auto;
-  color: #FFF;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 1.2em;
-  font-weight: 500;
-  font-stretch: normal;
-  text-align: center;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 0px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.slide-text .title {
-  font-size: 1.8em;
-  font-family: "Asap Condensed", sans-serif;
-}
-
-/* Media Carousel */
-.carousel-media .item {
-  margin: 0 auto;
-}
-
-/* Link Icon Carousel */
-.carousel-link .item {
-  width: 32px;
-  text-align: center;
-}
-
-/* Social Media Slider */
-.carousel-slider .owl-item img, .carousel-slider .owl-item .item-logo {
-  width: auto;
-  float: left;
-  margin: 0 10px 10px 0;
-  font-size: 32px;
-}
-
-/* Image Slider */
-.carousel-gallery .item {
-  text-align: center;
-}
-
-.carousel-gallery .owl-item img {
-  width: auto;
-  display: inline-block;
-  max-width: 100%;
-  margin: 0 10px 10px 0;
-}
-
-.banner-control:focus, .banner-control .pause:focus, .banner-control .play:focus, .owl-dot:focus, .owl-prev:focus, .owl-next:focus {
+.carousel .carousel-control-prev:focus,
+.carousel .carousel-control-next:focus {
   outline: solid 2px #2ea3f2;
-}
-
-.owl-carousel:focus {
-  outline: solid 2px #2ea3f2;
-}
-
-.owl-carousel .owl-nav button.owl-prev:focus {
-  margin-left: 3em;
-  outline: solid 2px #2ea3f2;
-}
-
-.owl-carousel .owl-nav button.owl-next:focus {
-  margin-right: 3em;
-  outline: solid 2px #2ea3f2;
-}
-
-button.owl-dot:focus {
-  outline: solid 2px #2ea3f2;
-}
-
-.owl-carousel:hover .owl-nav button.owl-prev:focus {
-  margin-left: 0;
-}
-
-.owl-carousel:hover .owl-nav button.owl-next:focus {
-  margin-right: 0;
-}
-
-.owl-carousel.carousel-media .owl-nav button.owl-prev:focus, .owl-carousel.carousel-link .owl-nav button.owl-prev:focus, .owl-carousel.carousel-slider .owl-nav button.owl-prev:focus {
-  margin-left: 0;
-}
-
-.owl-carousel.carousel-media .owl-nav button.owl-next:focus, .owl-carousel.carousel-link .owl-nav button.owl-next:focus, .owl-carousel.carousel-slider .owl-nav button.owl-next:focus {
-  margin-right: 0;
-}
-
-.owl-carousel.carousel-link .owl-item .item a {
-  display: block;
-}
-
-.owl-carousel.carousel-link .owl-item .item a:focus {
-  outline-offset: -2px;
-}
-
-.owl-video-wrapper .item-overlay {
-  display: none;
-}
-
-/* HEADER SLIDESHOW */
-.header-slideshow-banner {
-  position: relative;
-  /* Adjusting the height of the banner controls */
-}
-
-.header-slideshow-banner .banner-pager, .header-slideshow-banner .banner-play-pause {
-  z-index: 1;
-}
-
-.header-slideshow-banner .carousel {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-/* CA GOV Template hides the carousel by default. 
-   The following lines are to unhide it and make it look pretty */
-@media (max-width: 767px) {
-  .header-slideshow-banner {
-    display: block;
-  }
-  .header-slideshow-banner #primary-carousel {
-    margin: 0;
-    padding: 0;
-  }
-  .header-slideshow-banner #primary-carousel .slide-text {
-    bottom: -12px;
-    right: 0;
-    font-size: 14px;
-    width: 100%;
-  }
-  .header-slideshow-banner #primary-carousel .slide-text .title {
-    font-size: 19px;
-  }
-}
-
-/* Move the slide text below the image for small mobile devices */
-@media (max-width: 767px) {
-  .header-slideshow-banner .banner-pager, .header-slideshow-banner .banner-play-pause {
-    top: 15px;
-  }
-}
-
-.owl-carousel .backdrop {
-  background-color: #000 !important;
 }
 
 .plotly-chart .plotly-chart--loading {
